--- a/style-home-green.css
+++ b/style-home-green.css
@@ -114,6 +114,14 @@
     line-height: 30px;
 }
 
+a {
+    text-decoration: none;
+}
+
+body {
+    transition: 0.75s;
+}
+
 /* HEADER WITH POINTS & ICONS */
 
 .heade {
@@ -517,7 +525,7 @@
 
 /* BARRE DE NAVIGATION EN POSITION FIXE */
 
-.navbar2 {
+.navbar {
     position: fixed;
     left: 16px;
     top: 506px;
