--- a/style-contacts.css
+++ b/style-contacts.css
@@ -190,10 +190,14 @@ a p {
     color: var(--tag-color);
 }
 
+body {
+    transition: 0.75s;
+}
+
 .gridlist {
     display: grid;
     grid-template-rows: repeat(5, 1fr);
-    grid-row-gap: 5px;
+    grid-row-gap: 15px;
 
     margin: 20px 19px 100px 10px;
 
@@ -245,7 +249,7 @@ a p {
 
 /* BARRE DE NAVIGATION EN POSITION FIXE */
 
-.navbar5 {
+.navbar {
     position:fixed;
     left: 16px;
     top: 506px;
