--- a/style-profil.css
+++ b/style-profil.css
@@ -114,6 +114,14 @@
     line-height: 30px;
 }
 
+a {
+    text-decoration: none;
+}
+
+body {
+    transition: 0.75s;
+}
+
 /* HEADER WITH POINTS & ICONS */
 
 .heade {
@@ -174,15 +182,12 @@
 .title {
     position: relative;
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    justify-content: center;
     margin: 67px 19px -130px 7px;
     gap: 40px;
 }
 
-.title svg {
-    display: flex;
-}
+
 
 /* IMPACT ACCOUNT */
 
@@ -441,7 +446,7 @@ gap: 6px;
 
 /* BARRE DE NAVIGATION EN POSITION FIXE */
 
-.navbar5 {
+.navbar {
     position:fixed;
     left: 16px;
     top: 506px;
