--- a/style-scan-search.css
+++ b/style-scan-search.css
@@ -114,6 +114,14 @@
     line-height: 30px;
 }
 
+a {
+    text-decoration: none;
+}
+
+body {
+    transition: 0.75s;
+}
+
 /* HEADER WITH POINTS & ICONS */
 
 .heade {
@@ -495,7 +503,7 @@
 
 /* BARRE DE NAVIGATION EN POSITION FIXE */
 
-.navbar2 {
+.navbar {
     position: fixed;
     left: 16px;
     top: 506px;
@@ -526,7 +534,7 @@
     width: 44px;
     height: 44px;
     border-radius: 50%;
-    background: var(--main-color);
+    background: var(--clicked-color);
     display: flex;
     align-items: center;
     justify-content: center;
